[gd_scene load_steps=4 format=3 uid="uid://cgu3648hn1r2q"]

[ext_resource type="Texture2D" uid="uid://clneieqjta7bn" path="res://assets/board/2b19xknr.png" id="1_7vrkn"]
[ext_resource type="Script" uid="uid://dtvf88bwtxrxl" path="res://main_menu_options.gd" id="2_fu7sn"]
[ext_resource type="Theme" uid="uid://cwip20l6nai6q" path="res://new_theme.tres" id="3_fu7sn"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_7vrkn")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -78.0
offset_right = 137.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(136, 78)
theme = ExtResource("3_fu7sn")
script = ExtResource("2_fu7sn")

[node name="Lobby" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("3_fu7sn")
theme_override_font_sizes/font_size = 20
text = "Lobby"

[node name="Deckbuilder" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("3_fu7sn")
text = "Deckbuilder"

[node name="Update Database" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("3_fu7sn")
text = "Update Database"

[node name="Quit" type="Button" parent="Options"]
layout_mode = 2
theme = ExtResource("3_fu7sn")
text = "Quit"

[connection signal="pressed" from="Options/Lobby" to="Options" method="_on_lobby_pressed"]
[connection signal="pressed" from="Options/Deckbuilder" to="Options" method="_on_deckbuilder_pressed"]
[connection signal="pressed" from="Options/Update Database" to="Options" method="_on_update_database_pressed"]
[connection signal="pressed" from="Options/Quit" to="Options" method="_on_quit_pressed"]
